--- a/tests/isolated/Makefile
+++ b/tests/isolated/Makefile
@@ -20,6 +20,11 @@ JDK7 ?= /Library/Java/JavaVirtualMachines/jdk1.7.0_80.jdk/Contents/Home/
 JDK7_LIB_PATH := $(JDK7)/jre/lib
 endif
 
+# Setup variables for travis CI
+ifdef TRAVIS
+ADDITIONAL_JLANGC_OPTIONS:=-compiler-classpath $(realpath $(BASE_DIR)/lib/llvm-linux-x86_64-Ubuntu12.04.jar)
+endif
+
 SRC := $(shell find * -name "*.java")
 
 CLASSES := $(SRC:.java=.class)
@@ -70,12 +75,12 @@ $(SOL): $(SRC)
 
 $(LL): $(SRC)
 	@echo "Compiling $(words $?) Java file(s) down to LLVM IR"
-	@$(BASE_DIR)/bin/jlangc -cp $(JDK_CLASSES) -assert $?
+	@$(BASE_DIR)/bin/jlangc $(ADDITIONAL_JLANGC_OPTIONS) -cp $(JDK_CLASSES) -assert $?
 	@touch $(LL)
 
 %.ll: %.java
 	@echo "Compiling file to LLVM IR"
-	@$(BASE_DIR)/bin/jlangc -cp $(JDK_CLASSES) -assert $?
+	@$(BASE_DIR)/bin/jlangc $(ADDITIONAL_JLANGC_OPTIONS) -cp $(JDK_CLASSES) -assert $?
 
 %.binary: %.ll
 	@echo "Creating binary for $<"
