--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,13 @@ matrix:
 
 install: 
   # Install Boehm GC
-  - curl http://www.hboehm.info/gc/gc_source/gc-${BOEHM_VERSION}.tar.gz | tar -xz
+  - curl -OL http://www.hboehm.info/gc/gc_source/gc-${BOEHM_VERSION}.tar.gz
+  - tar -xzf gc-${BOEHM_VERSION}.tar.gz -C gc-${BOEHM_VERSION}
   - cd gc-${BOEHM_VERSION}
   - ./configure && make && make install
 
 before_script:
+  - cd ${TRAVIS_BUILD_DIR}
   - git lfs pull
 
 script:
