Try to fix tar command

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,10 @@ install:
   # # Install llvm 5
   # - brew install --force-bottle --with-clang llvm@5
   # Install Boehm GC
+  - sudo rm -r gc-${BOEHM_VERSION}
   - curl -OL http://www.hboehm.info/gc/gc_source/gc-${BOEHM_VERSION}.tar.gz
-  - sudo tar -xzf gc-${BOEHM_VERSION}.tar.gz -C ${TRAVIS_BUILD_DIR}/gc
-  - cd ${TRAVIS_BUILD_DIR}/gc
+  - sudo tar -xzf gc-${BOEHM_VERSION}.tar.gz
+  - cd gc-${BOEHM_VERSION}
   - ./configure && make && make install
 
 before_script:
