--- a/.travis.yml
+++ b/.travis.yml
@@ -34,13 +34,15 @@ install:
   # - brew install --force-bottle --with-clang llvm@5
   
   # Install libatomic_ops
-  - brew install libatomic_ops
+  - brew install libatomic_ops || brew upgrade libatomic_ops 
   
   # Install Boehm GC
   - curl -OL http://www.hboehm.info/gc/gc_source/gc-${BOEHM_VERSION}.tar.gz
   - sudo tar -xzf gc-${BOEHM_VERSION}.tar.gz
   - cd gc-${BOEHM_VERSION}
-  - sudo ./configure && make && make install
+  - sudo ./configure 
+  - sudo make 
+  - sudo make install
 
 before_script:
   - cd ${TRAVIS_BUILD_DIR}
