Install git lfs

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,9 @@ install:
   # # Install llvm 5
   # - brew install --force-bottle --with-clang llvm@5
   
+  # Install git-lfs
+  - brew install git-lfs
+
   # Install libatomic_ops
   - brew install libatomic_ops || brew upgrade libatomic_ops 
   
