--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,9 @@ install:
   # Install git-lfs
   - brew install git-lfs
 
+  # Install ant
+  brew install ant
+
   # Install libatomic_ops
   - brew install libatomic_ops || brew upgrade libatomic_ops 
   
