Fix Install llvm 5

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
 
 install: 
   # Install llvm 5
-  - brew install --force-bottle --with-clang llvm@5
+  - brew install --force-bottle llvm@5
   
   # Install git-lfs
   - brew install git-lfs
