--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ os: osx
 compiler: clang
 osx_image: xcode9.4
 
-# cache:
-#   directories:
-#     - boehmgc
+cache:
+  directories:
+    - /usr/local/Homebrew
 
 matrix:
   include:
