--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: java
+jdk:
+  - oraclejdk8
+
 
 # os: linux
 # dist: trusty
@@ -55,6 +58,7 @@ install:
 before_script:
   - cd ${TRAVIS_BUILD_DIR}
   - git lfs pull
+  - echo ${JAVA_HOME}
   - export JDK7=${JAVA_HOME}
 
 script:
