--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ addons:
     - libatomic_ops
   apt:
     sources:
-    - sourceline: deb http://llvm.org/apt/precise/ llvm-toolchain-precise main
+    - sourceline: deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty main
       key_url: http://llvm.org/apt/llvm-snapshot.gpg.key
     packages:
     - clang-5 llvm-5 llvm-5-dev
