--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ addons:
   apt:
     sources:
       - llvm-toolchain-trusty-5.0
+      - llvm-toolchain-trusty-6.0
     packages:
-      - clang-5.0 llvm-5.0 llvm-5.0-dev
+      - clang-5.0 llvm-5.0 llvm-5.0-dev libllvm5.0 libstdc++6 libstdc++-4.8-dev libgcc-4.8-dev libobjc-4.8-dev libclang-common-5.0-dev libclang1-5.0 llvm-5.0-runtime libllvm5.0 libstdc++6 libllvm5.0
   # apt:
   #   sources:
   #   - sourceline: deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty main
