Try to fix llvm sourceline

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ addons:
     sources:
       - llvm-toolchain-trusty-5.0
       - llvm-toolchain-trusty-6.0
+      - sourceline: 'ppa:ubuntu-toolchain-r/test'
     packages:
       - clang-5.0 llvm-5.0 llvm-5.0-dev libllvm5.0 libstdc++6 libclang-common-5.0-dev libclang1-5.0 llvm-5.0-runtime libllvm5.0 libstdc++6 libllvm5.0
   # apt:
