try wget for linux

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,11 +65,13 @@ install:
     fi
   
   # Install Boehm GC
-  - curl -OL http://www.hboehm.info/gc/gc_source/gc-${BOEHM_VERSION}.tar.gz
+  - 
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+      wget http://www.hboehm.info/gc/gc_source/gc-${BOEHM_VERSION}.tar.gz
       sudo tar -xfvw gc-${BOEHM_VERSION}.tar.gz
     else
+      curl -OL http://www.hboehm.info/gc/gc_source/gc-${BOEHM_VERSION}.tar.gz
       sudo tar -xzf gc-${BOEHM_VERSION}.tar.gz
     fi
 
