--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ install:
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
       wget http://www.hboehm.info/gc/gc_source/gc-${BOEHM_VERSION}.tar.gz
-      sudo tar -xfvw gc-${BOEHM_VERSION}.tar.gz
+      sudo tar -xzf gc-${BOEHM_VERSION}.tar.gz
     else
       curl -OL http://www.hboehm.info/gc/gc_source/gc-${BOEHM_VERSION}.tar.gz
       sudo tar -xzf gc-${BOEHM_VERSION}.tar.gz
