--- a/.travis.yml
+++ b/.travis.yml
@@ -40,9 +40,8 @@ install:
       echo LINUX
 
       # Install git lfs
-      wget https://packagecloud.io/github/git-lfs/packages/ubuntu/precise/git-lfs_2.7.1_amd64.deb
-      sudo dpkg -i git-lfs_2.7.1_amd64.deb
-
+      curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash
+      sudo apt-get install git-lfs
     else
       /usr/libexec/java_home -V
 
