--- a/.travis.yml
+++ b/.travis.yml
@@ -71,13 +71,12 @@ install:
 before_script:
   - cd ${TRAVIS_BUILD_DIR}
   - git lfs pull
-  - /usr/libexec/java_home -V
-
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
       export JAVA_HOME=$(/usr/libexec/java_home -v 1.8)
       export JDK7=$(/usr/libexec/java_home -v 1.7)
     else
+      /usr/libexec/java_home -V
       export JAVA_HOME=$(/usr/libexec/java_home -v 1.8)
       export JDK7=$(/usr/libexec/java_home -v 1.8)
     fi
