--- a/.travis.yml
+++ b/.travis.yml
@@ -73,8 +73,7 @@ before_script:
   - git lfs pull
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-      export JAVA_HOME=$(/usr/libexec/java_home -v 1.8)
-      export JDK7=$(/usr/libexec/java_home -v 1.7)
+      export JDK7=/usr/lib/jvm/java-7-oracle
     else
       /usr/libexec/java_home -V
       export JAVA_HOME=$(/usr/libexec/java_home -v 1.8)
