--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,14 @@ install:
       # Install git lfs
       curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash
       sudo apt-get install git-lfs
+
+      # Install ant 1.9
+      wget https://www-us.apache.org/dist//ant/binaries/apache-ant-1.9.14-bin.tar.gz
+      sudo tar -xf apache-ant-1.9.14-bin.tar.gz  -C /usr/local
+      sudo ln -s /usr/local/apache-ant-1.9.7/ /usr/local/ant
+      export ANT_HOME=/usr/local/ant
+      export PATH=${ANT_HOME}/bin:${PATH}
+      
     else
       /usr/libexec/java_home -V
 
