--- a/.travis.yml
+++ b/.travis.yml
@@ -45,11 +45,10 @@ install:
 
       # Install ant 1.9
       wget https://www-us.apache.org/dist//ant/binaries/apache-ant-1.9.14-bin.tar.gz
-      sudo tar -xf apache-ant-1.9.14-bin.tar.gz  -C /usr/local
+      sudo tar -xzf apache-ant-1.9.14-bin.tar.gz  -C /usr/local
       sudo ln -s /usr/local/apache-ant-1.9.7/ /usr/local/ant
       export ANT_HOME=/usr/local/ant
       export PATH=${ANT_HOME}/bin:${PATH}
-      
     else
       /usr/libexec/java_home -V
 
