--- a/.travis.yml
+++ b/.travis.yml
@@ -93,9 +93,12 @@ before_script:
       /usr/libexec/java_home -V
       export JAVA_HOME=$(/usr/libexec/java_home -v 1.8)
       export JDK7=$(/usr/libexec/java_home -v 1.8)
+      export JDK=jdk
     fi
 
 script:
   - |
+      env
       make
+      env
       make tests
