Add compiler class path option to jlangc. Update isolated tests makefile to pass in the ubuntu 12 jar when running travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
     - git-lfs
     - ant@1.9
     - libatomic_ops
+    update: true
   apt:
     sources:
       - llvm-toolchain-trusty-5.0
