Add travis support to tests makefile

--- a/tests/isolated/Makefile
+++ b/tests/isolated/Makefile
@@ -19,6 +19,11 @@ JDK_CLASSES := $(realpath $(JDK)/out/classes)
 JDK7 ?= /Library/Java/JavaVirtualMachines/jdk1.7.0_80.jdk/Contents/Home/
 endif
 
+# Setup variables for travis CI
+ifdef TRAVIS
+ADDITIONAL_JLANGC_OPTIONS:=-compiler-classpath $(realpath lib/llvm-linux-x86_64-Ubuntu12.04.jar)
+endif
+
 SRC := $(shell find * -name "*.java")
 
 CLASSES := $(SRC:.java=.class)
