--- a/.travis.yml
+++ b/.travis.yml
@@ -38,42 +38,31 @@ matrix:
 install: 
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-      echo LINUX
-
       # Install git lfs
       curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash
       sudo apt-get install git-lfs
 
-    else
-      /usr/libexec/java_home -V
-
-      # Install llvm 5
-      export PATH="/usr/local/opt/llvm@5/bin:$PATH"
-
-      # Install ant 1.9 
-    fi
-  
-  # Install ant 1.9
-  - |
-    if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+      # Install ant 1.9.14
       wget https://www-us.apache.org/dist//ant/binaries/apache-ant-1.9.14-bin.tar.gz
       sudo tar -xzf apache-ant-1.9.14-bin.tar.gz
       export PATH=$(pwd)/apache-ant-1.9.14/bin:${PATH}
-      ant -version
-    else
-      export PATH="/usr/local/opt/ant@1.9/bin:$PATH"
-    fi
 
-  # Install Boehm GC
-  - |
-    if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+      # Download Boehm GC
       wget http://www.hboehm.info/gc/gc_source/gc-${BOEHM_VERSION}.tar.gz
       sudo tar -xzf gc-${BOEHM_VERSION}.tar.gz
     else
+      # Add llvm 5 to the path
+      export PATH="/usr/local/opt/llvm@5/bin:$PATH"
+
+      #Add ant 1.9 to the path
+      export PATH="/usr/local/opt/ant@1.9/bin:$PATH"
+
+      #Download Boehm GC
       curl -OL http://www.hboehm.info/gc/gc_source/gc-${BOEHM_VERSION}.tar.gz
       sudo tar -xzf gc-${BOEHM_VERSION}.tar.gz
     fi
 
+  # Install Boehm GC
   - sudo tar -xzf gc-${BOEHM_VERSION}.tar.gz
   - cd gc-${BOEHM_VERSION}
   - sudo ./configure 
@@ -88,11 +77,9 @@ before_script:
       export JDK7=/usr/lib/jvm/java-7-oracle
       export CLANG_VERSION=5.0
     else
-      /usr/libexec/java_home -V
       export JAVA_HOME=$(/usr/libexec/java_home -v 1.8)
       export JDK7=$(/usr/libexec/java_home -v 1.8)
       export JDK=jdk
-      ls /Library/Java/JavaVirtualMachines/
     fi
 
 script:
